--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//spinner/spinner/cmd/sync.py=utf-8
 encoding//spinner/spinner/data/external_mappers.py=utf-8
 encoding//spinner/spinner/items.py=utf-8
 encoding//spinner/spinner/models.py=utf-8
